Version 1.2

2013-01-04
 Allow line offset in inline filter comments.
 
2013-01-04
 Plugin system added.

2013-01-03
 Handle tcl::mathfunc for user defined functions.

2013-01-03
 Added definition file for package "tkdnd"
 Added definition file for package "vfs::mk4"

2012-11-18
 Added inline implictvarcmd to handle misc situations where variables come
 into existance.

2012-11-18
 Changed inline comment implicitvar to implicitvarns.

2012-10-04
 Include known package information in header file.       
 Added inline syntax to make package known or required.
 Added -pkgpicky command line for package debug.

2012-10-03
 Autoload package definition on package require

2012-10-03
 Changed to extended select mode in package list, to allow selecting multiple.
 Handle package definitions better in GUI.
 Added definition file for package "inifile"

2012-08-26
 Parse comments in sequence with statements to get the right context for them
 Notice unescaped close braces.

2012-08-13
 Fixed bug where filter pragmas could leak to similar line numbers. [Bug 18486]

2012-08-13
 Handle "try" command as a special command to cover all variants.
 Avoid overriding if/try in headers.

2012-08-13
 Detect changes in builtins during header generation.

2012-08-09
 Started on infrastructure for package definitions.
 Include a snit definition file in distribution.

2012-08-09
 New token "nl" to handle "dict for"'s variable list.
 
2012-01-05
 Recognise "others" in last switch branch as a possible mistake.

Version 1.1.12

2011-11-27
 Recognise common construct ${ns}::var as non-suspicious.

2011-11-26
 Made it possible to customize how Nagelfar is installed.

2011-10-15
 Corrected some trace sub commands in syntax database.

2011-08-09
 Added checks for array/scalar mixup.

2011-04-19
 Further processing to diagnose missing brace.

2011-04-17
 Added -H command line switch.

2010-10-05
 Support for tcloo's implicit variables
 Support for tcloo "my" command.
 Support for tcloo "next" command.
