@@ -1,3 +1,6 @@
+2013-01-09
+ Handle token with both type and ? modifier.
+
 Version 1.2
 
 2013-01-04
